# rust-xml_dom_xpath

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  xpath.pest
src/xpath1/: mod.rs  model.rs
src/xpath1/evaluate/: filters.rs  mod.rs  node_set.rs
src/xpath1/model/: function.rs  mod.rs  path.rs  predicate.rs  select.rs  step.rs
src/xpath1/parse/: mod.rs  pest_parser.rs
src/xpath1/parser/: mod.rs  pest_parser.rs
tests/: spec_examples.rs
